--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <div class="jumbotron text-center">
+    <h2>This is a simulation, please do not enter any information.</h2>
+    <p></p>
     <h1>Welcome to Dev Match</h1>
     <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
